--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,10 +3,13 @@ name: Docker Image CI
 on:
   pull_request:
     types: [opened, synchronize]
+    paths-ignore:
+    - '**.md'
   push:
     branches:
     - master
-    - modules
+    paths-ignore:
+    - '**.md'
 
 jobs:
   test:
@@ -19,11 +22,23 @@ jobs:
       with:
         fetch-depth: 1
 
-    - name: Docker build
-      run: docker build . --file Dockerfile --tag ${DOCKER_IMAGE}
+    - name: Set env
+      run: |
+        echo "::set-env name=LATEST::${DOCKER_IMAGE}:latest"
+        echo "::set-env name=LATEST_MOD::${DOCKER_IMAGE}:latest-mod"
+
+    - name: Build alpine image
+      run: |
+        docker build . -t "${LATEST}"
+
+    - name: Build golang image
+      run: |
+        docker build . -t "${LATEST_MOD}" --build-arg BASE_IMAGE=golang:1.13-alpine3.10"
 
     - name: Print Hugo version
-      run: docker run --rm ${DOCKER_IMAGE} version
+      run: |
+        docker run --rm ${LATEST} version
+        docker run --rm ${LATEST_MOD} version
 
 
   hadolint:
@@ -32,7 +47,5 @@ jobs:
     - uses: actions/checkout@v1
       with:
         fetch-depth: 1
-    - name: hadolint
-      run: |
-        brew install hadolint
-        hadolint ./Dockerfile
+    - run: brew install hadolint
+    - run: hadolint ./Dockerfile
