--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,7 +15,7 @@ jobs:
   test:
     runs-on: ubuntu-18.04
     env:
-      DOCKER_IMAGE: ${{ github.repository }}:${{ github.sha }}
+      DOCKER_IMAGE: ${{ github.repository }}
 
     steps:
     - uses: actions/checkout@v1
